--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: invernadero
+    name: invernadero-django
     runtime: python3
-    buildCommand: pip install -r requirements.txt
-    startCommand: sh start.sh
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "bash start.sh"
     envVars:
       - key: DJANGO_ENV
         value: production
