--- a/render.yaml
+++ b/render.yaml
@@ -3,18 +3,18 @@ services:
     name: invernadero-django
     runtime: python3
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "bash start.sh"
+    startCommand: "bash direct-start.sh"
     envVars:
       - key: DJANGO_ENV
         value: production
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
-        value: false
+        value: "False"
       - key: ALLOWED_HOSTS
         fromService:
           type: web
-          name: invernadero
+          name: invernadero-django
           property: host
       - key: DB_NAME
         fromDatabase:
@@ -39,5 +39,5 @@ services:
 
 databases:
   - name: invernadero-db
-    databaseName: invernadero
+    databaseName: invernadero_prod
     user: invernadero_user
