--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 DJANGO_ENV=production
 SECRET_KEY=your-secret-key-here
 DEBUG=False
-ALLOWED_HOSTS=https://floracore.onrender.com/s
+ALLOWED_HOSTS=floracore.onrender.com
 
 # Database Configuration (PostgreSQL)
 DB_NAME=your_database_name
